--- a/trunk/site-templates/albertschweitzerschule/css/albertschweitzer.css
+++ b/trunk/site-templates/albertschweitzerschule/css/albertschweitzer.css
@@ -126,6 +126,10 @@
 	hr { margin:50px 0 30px 0; border-top:1px solid #ededed; border-bottom:none; }
 
 	.top-60 { margin-top:60px; }
+	.top-80 { margin-top:80px; }
+	.bg-gray { background-color: #eee; }
+	.no-padding-lr { padding-left: 0; padding-right: 0; }
+	.center { text-align: center; }
 
 	.brandname {
 		font-family: 'AlexBrushRegular';
