--- a/trunk/assets/css/cms_screen2.css
+++ b/trunk/assets/css/cms_screen2.css
@@ -50,23 +50,14 @@
     font-weight: normal;
     font-style: normal;
 }
-@font-face {font-family:'RaphaelIcons';
-    src: url('/assets/fonts/raphaelicons-webfont.eot');
-    src: local('?'), 
-	url('/assets/fonts/raphaelicons-webfont.woff') format('woff'), 
-	url('/assets/fonts/raphaelicons-webfont.ttf') format('truetype'), 
-	url('/assets/fonts/raphaelicons-webfont.svg#webfontjJTHv0E8') format('svg');
-    font-weight: normal;
-    font-style: normal;
-}
 
 
 /* --------------------------------------------------------------------------------------------------- */
 /* Standard HTML tags */
 /* --------------------------------------------------------------------------------------------------- */
-body { background-color:#085e73; padding:0; margin:0; width:100%; height:100%; overflow:hidden; }
-h1 { font-family:'FjordOne',Helvetica,Arial,sans-serif; font-size:1.5em; font-weight:600; color:#589da6; margin-top:15px; }
-h2 { font-family:'DroidSansRegular',Helvetica,Arial,sans-serif; font-size:1.2em; font-weight:normal; color:#9cacb3; margin:0;}
+body { background-color:#fff; padding:0; margin:0; width:100%; height:100%; overflow:hidden; }
+h1 { font-family:'FjordOne',Helvetica,Arial,sans-serif; font-size:1.5em; font-weight:600; color:#0c3546; margin-top:15px; }
+h2 { font-family:'DroidSansRegular',Helvetica,Arial,sans-serif; font-size:1.2em; font-weight:normal; color:#f06021; margin:0;}
 ul { padding:0; list-style-type:none; }
 li { display:block; }
 
@@ -75,7 +66,7 @@ li { display:block; }
 /* Standard classes */
 /* --------------------------------------------------------------------------------------------------- */
 .serif { font-family:'FjordOne',Georgia,"Times New Roman",Times,serif; }
-.sans-serif { font-family:'DroidSansRegular',Helvetica,Arial,sans-serif; }
+.sans-serif { font-family: Helvetica,Arial,sans-serif; }
 .normal-lh { line-height:1.6em; }
 .bold { font-weight:600; }
 .italic { font-style:italic; }
@@ -87,19 +78,22 @@ li { display:block; }
 .semi-big { font-size:1.3em; }
 .big { font-size:1.2em; }
 .very-big { font-size:1.5em; }
-.headline { font-size:1.5em; font-weight:600; color:#589da6; }
-.black { color:black; }
-.white { color:white; }
+.headline { font-size:1.7em; font-weight:600; padding-left:30px; line-height: 3.5em;}
+.black { color:#000; }
+.white { color:#fff; }
 .light-blue { color:#589da6; }
 .gray { color:#9cacb3; }
 .dark-gray { color:#0c3546; }
 .green { color:#10CC17; }
 .blue { color:#085e73; }
 .red { color:#DE1826;}
+.orange { color:#f06021; }
 .negative-left-margin-2 { margin-left:-3px; }
 .std-left-margin { margin-left: 20px; }
 .bottom-padding-10 { padding-bottom:10px; }
 .right-padding-10 { padding-right:10px; }
+.left-padding-10 { padding-left:10px; }
+.top-padding-10 { padding-top:10px; }
 .no-margin { margin:0; }
 .icon { font-weight: normal;font-style: normal;line-height: normal;font-family: 'RaphaelIcons';position: relative;/*top: 0.1em;*/ }
 .icon-space-top { top:0.1em; }
@@ -112,21 +106,19 @@ li { display:block; }
 /* --------------------------------------------------------------------------------------------------- */
 /* Special classes */
 /* --------------------------------------------------------------------------------------------------- */
-.title { background-color:#f0f0ed; padding:5px 20px 5px 20px;}
-.title a { text-decoration:none; background-color:#dededc; padding:4px 9px; color:#0c3546; }
-.title a:hover {text-decoration:none; background-color:#b0b0af; transition:.2s linear;-moz-transition:.2s linear;-webkit-transition:.2s linear; }
-.bottombar { color:#0c3546; background-color:#f0f0ed; padding:20px; clear:both; }
-.bottombar a { text-decoration:none; border-bottom:1px dotted; color:#0c3546; }
-.navmenu { background-color:#f0f0ed;/*#2e505d*/ color:white; padding:15px;}
-.navmenu ul { margin-top:10px; list-style-type:none; }
-.navmenu ul li { display:block; padding:5px 0; font-size:1em;}
-.navmenu ul li a { color:#0c3546; text-decoration:none; }
+.title { background-color:#fff !important; padding:0 20px 5px 0; border-bottom: 1px solid #dedede !important;}
+.title a { text-decoration:none; background-color:#dedede; padding:4px 9px; color:#0c3546; -moz-border-radius:5px; border-radius:5px; }
+.title a:hover {text-decoration:none; background-color:#eac9c9; transition:.2s linear;-moz-transition:.2s linear;-webkit-transition:.2s linear; }
+.branding-logo { float:left; width:80px; height: 70px; border-right: 1px solid #dedede !important; padding:3px 0 0 10px;}
+.bottombar { color:#222; background-color:#fff; padding:20px; clear:both; border-top:1px solid #dedede !important; }
+.bottombar a { text-decoration:none; border-bottom:1px dotted; color:#f06021; }
 .content { background-color:#efefef;/*#E0E0E0;*/ }
 .content-extjs { background-color:#e0e0e0; }
 .dashboard-list { width:73%; }
 .dashboard-list li { text-align:justify; text-justify:newspaper; padding:15px; cursor:pointer; }
-.hover-dashboard { background-color:#2e505d; -moz-border-radius:5px; border-radius: 5px; color:white;}
-.unhover-dashboard { background-color: white; color:#0c3546; -moz-border-radius:5px; border-radius: 5px; }
+.hover-dashboard { background-color:#f06021; -moz-border-radius:5px; border-radius: 5px; color: #fff; }
+.hover-dashboard h2 { color: #fff; }
+.unhover-dashboard { background-color: #fff; color:#0c3546; -moz-border-radius:5px; border-radius: 5px; }
 .tbl-fullwidth { width:100%; border-color:black;}
 .tbl-fullwidth tr td { vertical-align:top;padding-right:20px;}
 .imageselect { width:120px; height:100px; margin:10px; border:1px solid #99BBE8; text-align:center; border:1px solid #E0E0E0; float:left; padding:5px;}
@@ -138,6 +130,14 @@ li { display:block; }
 /* Standard IDs */
 /* --------------------------------------------------------------------------------------------------- */
 #title { background-color:white; padding:20px;}
+#navmenu { background-color: #fff; border-right:1px solid #dedede;}
+#navmenu ul { margin-top:10px; list-style-type:none; }
+#navmenu ul li { font-size:0.9em; text-align: center;color: #dedede; margin:15px 6px;}
+#navmenu ul li a { color:#dedede; text-decoration:none; font-size: 3em; }
+#navmenu ul li a:hover { color: #f06021; transition:.5s linear;-moz-transition:.5s linear;-webkit-transition:.5s linear; }
+#navmenu ul .active { color: #f06021; }
+#headline-description { font-size: 1.4em; font-weight: 400; color: #f06021; }
+#headline-description:before { content:"\f0da"; color: #f06021; font-family: "FontAwesome"; padding: 0 10px; } 
 #infobar { background-color:#f0f0ed; padding:10px 20px; }
 #infobar a { text-decoration:none; background-color:#dededc; padding:4px 9px; color:#0c3546; }
 #infobar a:hover {text-decoration:none; background-color:#b0b0af; transition:.2s linear;-moz-transition:.2s linear;-webkit-transition:.2s linear; }
@@ -155,7 +155,10 @@ li { display:block; }
 /* --------------------------------------------------------------------------------------------------- */
 /* EXTJS overrides */
 /* --------------------------------------------------------------------------------------------------- */
-.x-panel-header-default { background-image:none; }
+.x-panel-header-default { background-image:none; background-color:#f06021; border-width: 0px; }
+.x-panel-header-default-top { box-shadow: none; -o-box-shadow: none; -webkit-box-shadow: none; -moz-box-shadow: none; }
+.x-panel-header-text-default { color:white; font:normal 1.2em 'DroidSansRegular',Helvetica,Arial,sans-serif; font-weight: 100; margin:3px; }
+.x-nlg .x-panel-header-default-top { background-image:none; } /* IE fix */
 .x-toolbar-default { background-image:none; background-color:#f0f0ed; }
 .x-column-header { background-image:none; background-color:#f0f0ed; }
 .x-column-header-over { background-image:none; }
@@ -163,11 +166,16 @@ li { display:block; }
 .x-column-header-sort-DESC { background-color:#d7d2d2; }
 .x-btn-default-toolbar-small { border-style:none; }
 .x-btn-default-toolbar-small-over { background-image:none; background-color:#d7d2d2; border-radius:0;}
-.x-panel-body-default { background-color: #f0f0ed; }
+.x-panel-body-default { background-color: #fff; border-width: 0; border-style: none; }
 .x-tab { border-color:#f0f0ed; }
 .x-tab-bar { background-image:none; background-color:#f0f0ed; }
 .x-tab-bar-top .x-tab-bar-body { border-width:1px 0 3px;}
 .x-tab-bar-body { border-color:#f0f0ed; }
 .x-tab-top-active { background-image:none; background-color:#d7d2d2 !important;}
 .x-tab-default-top { background-image:none; background-color:#f0f0ed; border-radius:0; box-shadow:none;}
-
+.x-window-body-default { background-color: #fff; background-image: none; }
+.x-mask { opacity: 0.7; background-color: #fff; }
+.x-form-text, textarea.x-form-field { background-image: none; border-color: #dedede; }
+textarea.x-form-field { background-image: none; border-color: #dedede; }
+.x-btn-default-small { background-image: none; background-color:#dedede; padding:4px 9px; color:#0c3546; -moz-border-radius:5px; border-radius:5px; border: none; color:#0c3546; }
+.x-btn-default-small-over { background-color:#eac9c9; transition:.2s linear;-moz-transition:.2s linear;-webkit-transition:.2s linear; border: none; color:#0c3546; } 
