--- a/site-templates/reichertpsychotherapie/css/reichertpsychotherapie.css
+++ b/site-templates/reichertpsychotherapie/css/reichertpsychotherapie.css
@@ -1,275 +1,1 @@
-/* ==========================================================================
-   Author's custom styles
-   ========================================================================== */
-   
-   /**************************************************
-	*
-	* colors:
-	* ========
-	* main: 342B22 (sepia brown)
-	* monochromatic1: 4D341B (natural brown)
-	* monochromatic2: 806A54 (grey brownish)
-	* monochromatic3: 80572E (glowing brown)
-	* monochromatic4: CCA986 (bright)
-	* complemantary3: 3A7080 (light blue)
-	* complementary4: 222F33 (dark blue)
-	* compound1: 997A27 (orange)
-	* compound3: 1A403F (dark green)
-	* compund4: 396658 (light green)
-	*
-	* highlight colors:
-	* ===================
-	* main: 2B8BFF (light blue)
-	* complementary1: 4499FF (lighter blue)
-	* complementary2: 0051B2 (darker blue)
-	* complementary3: B27810 (dark orange)
-	* complementary4: FFB42B (light orange)
-	*
-	**************************************************/
-
-   /*
-   @font-face {
-		font-family: 'Capita-Light';
-		src: url('25A809_0_0.eot');
-		src: url('25A809_0_0.eot?#iefix') format('embedded-opentype'),
-			url('25A809_0_0.woff') format('woff'),
-			url('25A809_0_0.ttf') format('truetype');
-	}
-	*/
-	
-	/*
-	@font-face {
-		font-family: 'MuseoSans-500';
-		src: url('25C6E0_0_0.eot');
-		src: url('25C6E0_0_0.eot?#iefix') format('embedded-opentype'),
-			url('25C6E0_0_0.woff') format('woff'),
-			url('25C6E0_0_0.ttf') format('truetype');
-	}
-	*/
-	
-	@font-face {
-		font-family: 'Corda-Light';
-		src: url('25C6E7_1_0.eot');
-		src: url('25C6E7_1_0.eot?#iefix') format('embedded-opentype'),
-			url('25C6E7_1_0.woff') format('woff'),
-			url('25C6E7_1_0.ttf') format('truetype');
-	}
-	 
-	  
-	@font-face {
-		font-family: 'SanchezCondensed';src: 
-		url('25C6E7_2_0.eot');
-		src: url('25C6E7_2_0.eot?#iefix') format('embedded-opentype'),
-			url('25C6E7_2_0.woff') format('woff'),
-			url('25C6E7_2_0.ttf') format('truetype');
-	}
-	
-    @font-face {
-	    font-family: 'Barlow';
-	    src: url('Barlow-Regular.eot');
-	    src: url('Barlow-Regular.eot?#iefix') format('embedded-opentype'),
-	         url('Barlow-Regular.woff2') format('woff2'),
-	         url('Barlow-Regular.woff') format('woff'),
-	         url('Barlow-Regular.ttf') format('truetype');
-	    font-weight: normal;
-	    font-style: normal;
-  }
-	
-	html { height: 100%; }
-
-	body {
-		font-family: 'Barlow', serif;
-		color: #342B22;
-		-webkit-font-smoothing: antialiased !important;
-		height:80%;
-		font-size: 16px;
-	}
-	
-	h1 { font-size:26px; color:#2E2B2B; font-family: 'SanchezCondensed', sans-serif;}
-	h2 { font-size:22px; color:#806A54;}
-	h3 { font-size:20px; color:#000; font-family: 'Corda-Light', sans-serif;}
-	h4 { font-size:18px; color:#4D341B;}
-	h5 { font-size:17px; color:#333332; font-family: 'Corda-Light', sans-serif;}
-	h6 { font-size:16px; }
-
-	p { line-height: 1.6; }
-
-	ul, ol { line-height: 24px; }
-
-	li { line-height: 24px; color:#4D341B;}
-
-	table {	line-height:1.9em; border: 0 solid #F1F1F1; }
-	/* add alternativ colors to table rows */
-	tr:nth-child(odd) { background-color: #F1F1F1; }
-	tr:nth-child(even) { background-color:#FFF;}
-
-	hr { margin:50px 0 30px 0; border-top:1px solid #ededed; border-bottom:none; }
-
-	.top-60 { margin-top:60px; }
-	.top-80 { margin-top:80px; }
-	.bg-gray { background-color: #eee; }
-	.no-padding-lr { padding-left: 0; padding-right: 0; }
-	.center { text-align: center; }
-
-	.brandname {
-		font-family: 'Barlow';
-		font-weight:100;
-		font-size:1.2em;
-    color: #474747;
-	}
-	
-	.navbar {
-		margin-bottom:0;
-		font-size:14px;
-	}
-	
-	.header {
-		font-family: serif;
-		background-color: #000;
-		/*width:100%;*/
-		color: #fff;
-		min-height:100%; 
-		-webkit-transform: translateZ(0);
-		-moz-transition: height;
-		-webkit-transition: height;
-		-o-transition: height;
-		transition: height;
-		-moz-transition-duration: 0.3s;
-		-webkit-transition-duration: 0.3s;
-		-o-transition-duration: 0.3s;
-		transition-duration: 0.3s;
-	}
-	
-	/* extra bar containing info where-am-i and if set picture description */
-	.infonavbar {
-		padding: 20px 0px 16px 15px;
-		border-bottom: 6px double #ededed;
-		margin-bottom: 30px;
-	}
-	
-	div.headlinewrapper {
-		position: relative;
-		margin-left:auto;
-		margin-right:auto;
-		min-height:660px;
-	}
-	
-	div.headline {
-		position:absolute;
-		bottom:40px;
-		width:90%;
-	}
-	
-	div.headline h1 {
-		text-shadow: 0 1px 13px #2E2B2B;
-		font-family: 'Barlow', serif;
-		font-size: 6em;
-		display: inline-block;
-		color: #fff;
-		font-weight:600;
-		line-height: 1em;
-		margin: 0px;
-		-webkit-transition: font-size .3s ease-in-out;
-		-moz-transition: font-size .3s ease-in-out;
-		-o-transition: font-size .3s ease-in-out;
-		-ms-transition: font-size .3s ease-in-out;
-	}
-	
-	div.headline h2 {
-		text-shadow: 0 1px 8px #2E2B2B;
-		font-family: 'Barlow', serif;
-		font-size: 2em;
-		display: inline-block;
-		color: #fff;
-		line-height: 1em;
-		margin-bottom: 0px;
-		-webkit-transition: font-size .3s ease-in-out;
-		-moz-transition: font-size .3s ease-in-out;
-		-o-transition: font-size .3s ease-in-out;
-		-ms-transition: font-size .3s ease-in-out;
-	}
-	
-	div.headline h3 {
-		font-family: 'SanchezCondensed', sans-serif;
-		font-size: 1.5em;
-		display: inline-block;
-		background-color:rgba(0, 0, 0, 0.6);
-		color: #CCA986;
-		line-height: 1.4em;
-		padding: 10px;
-		max-width: 60%;
-		font-style:italic;
-		-webkit-transition: font-size .3s ease-in-out;
-		-moz-transition: font-size .3s ease-in-out;
-		-o-transition: font-size .3s ease-in-out;
-		-ms-transition: font-size .3s ease-in-out;
-	}
-	
-	div.imagedescription {
-		font-style: italic;
-		font-size: 0.9em;
-	}
-
-	/* a fallback image background for the header, usable for IE8 and below */
-	.ie-fallback-headerimage {
-		background:url('../img/ie-fallback.jpg') no-repeat fixed center top;
-	}
-
-	/**
-	 * bootstrap css fix against a jumping structure-header image
-	 */
-	.navbar-fixed-top { margin-bottom: 0px; }
-	
-	/**
-	 * Depending on the screen resolution some elements can be shown / have to be hidden
-	 */
-	@media only screen and (min-width: 768px) {
-		
-		div.border-left-col {
-			border-left: 6px double #ededed;
-			width:28%;
-			padding-left:10px;
-		}
-
-		div.border-right-col {
-			border-right: 6px double #ededed;
-			width: 28%;
-			padding-right:10px;
-		}	
-	}
-		
-	/**
-	* Contact form
-	*/
-	#contact_form input, textarea {
-		margin-top: 3px;
-		font-family: 'Barlow', serif;
-		width:75%;
-	}
-
-	#contact_form .submit {
-		-webkit-border-radius: 4px;
-     	-moz-border-radius: 4px;
-        border-radius: 4px;
-	}
-
-	#contact_form_email_error { color:red; }
-	#contact_form_message_error { color:red; }
-
-	/**
-	 * Google Maps InfoWindow Bugfix
-	 */
-	#mapview img { max-width: none; }
-
-	/**
-	 * Styling the Bootstrap Accordeon similar to the navbar
-	 */
-	.accordion-heading {
-		background-color: #fafafa;
-		background-image: -moz-linear-gradient(top, #ffffff, #f2f2f2);
-		background-image: -webkit-gradient(linear, 0 0, 0 100%, from(#ffffff), to(#f2f2f2));
-		background-image: -webkit-linear-gradient(top, #ffffff, #f2f2f2);
-		background-image: -o-linear-gradient(top, #ffffff, #f2f2f2);
-		background-image: linear-gradient(to bottom, #ffffff, #f2f2f2);
-		background-repeat: repeat-x;
-	}
+@font-face{font-family:Open Sans;font-style:normal;font-weight:400;src:url("fonts/open-sans-v17-latin-regular.eot");src:local("Open Sans Regular"),local(OpenSans-Regular),url("fonts/open-sans-v17-latin-regular.eot?iefix") format("embedded-opentype"),url("fonts/open-sans-v17-latin-regular.woff2") format("woff2"),url("fonts/open-sans-v17-latin-regular.woff") format("woff"),url("fonts/open-sans-v17-latin-regular.ttf") format("truetype"),url("fonts/open-sans-v17-latin-regular.svg#OpenSans") format("svg")}@font-face{font-family:Open Sans;font-style:italic;font-weight:400;src:url("fonts/open-sans-v17-latin-italic.eot");src:local("Open Sans Italic"),local(OpenSans-Italic),url("fonts/open-sans-v17-latin-italic.eot?iefix") format("embedded-opentype"),url("fonts/open-sans-v17-latin-italic.woff2") format("woff2"),url("fonts/open-sans-v17-latin-italic.woff") format("woff"),url("fonts/open-sans-v17-latin-italic.ttf") format("truetype"),url("fonts/open-sans-v17-latin-italic.svg#OpenSans") format("svg")}@font-face{font-family:Open Sans;font-style:normal;font-weight:700;src:url("fonts/open-sans-v17-latin-700.eot");src:local("Open Sans Bold"),local(OpenSans-Bold),url("fonts/open-sans-v17-latin-700.eot?iefix") format("embedded-opentype"),url("fonts/open-sans-v17-latin-700.woff2") format("woff2"),url("fonts/open-sans-v17-latin-700.woff") format("woff"),url("fonts/open-sans-v17-latin-700.ttf") format("truetype"),url("fonts/open-sans-v17-latin-700.svg#OpenSans") format("svg")}@font-face{font-family:Open Sans;font-style:italic;font-weight:700;src:url("fonts/open-sans-v17-latin-700italic.eot");src:local("Open Sans Bold Italic"),local(OpenSans-BoldItalic),url("fonts/open-sans-v17-latin-700italic.eot?iefix") format("embedded-opentype"),url("fonts/open-sans-v17-latin-700italic.woff2") format("woff2"),url("fonts/open-sans-v17-latin-700italic.woff") format("woff"),url("fonts/open-sans-v17-latin-700italic.ttf") format("truetype"),url("fonts/open-sans-v17-latin-700italic.svg#OpenSans") format("svg")}@font-face{font-family:Roboto;font-style:normal;font-weight:500;src:url("fonts/roboto-v20-latin-500.eot");src:local("Roboto Medium"),local(Roboto-Medium),url("fonts/roboto-v20-latin-500.eot?iefix") format("embedded-opentype"),url("fonts/roboto-v20-latin-500.woff2") format("woff2"),url("fonts/roboto-v20-latin-500.woff") format("woff"),url("fonts/roboto-v20-latin-500.ttf") format("truetype"),url("fonts/roboto-v20-latin-500.svg#Roboto") format("svg")}@font-face{font-family:Roboto;font-style:italic;font-weight:500;src:url("fonts/roboto-v20-latin-500italic.eot");src:local("Roboto Medium Italic"),local(Roboto-MediumItalic),url("fonts/roboto-v20-latin-500italic.eot?iefix") format("embedded-opentype"),url("fonts/roboto-v20-latin-500italic.woff2") format("woff2"),url("fonts/roboto-v20-latin-500italic.woff") format("woff"),url("fonts/roboto-v20-latin-500italic.ttf") format("truetype"),url("fonts/roboto-v20-latin-500italic.svg#Roboto") format("svg")}@media (max-width: 1024px){.nav{display:none}}.nav{height:100%;width:450px;background-color:#f5f9f8;border-right:2px solid #E6E6E6;overflow-x:hidden;overflow-y:auto}.nav .logo{background-color:#063249;font-family:"Roboto", sans-serif;position:relative}.nav .logo .name{font-family:"Roboto", sans-serif;font-size:2em;background-color:#063249;color:#f5f9f8;margin:0;padding:10px 10px 5px 10px}.nav .logo .occupation{font-size:0.9em;color:#AECDD1;margin:0;padding:0 10px 20px 10px}.nav .logo .location{font-size:1.1em;color:#1f1b1f;background-color:#F2EEA7;margin:0;position:absolute;bottom:10px;right:10px;padding:5px 10px}.nav nav>ul{padding:0;margin:0}.nav nav>ul li{display:block;list-style:none;cursor:pointer;border-bottom:2px solid #E6E6E6}.nav nav>ul li:nth-of-type(1){border-top:2px solid #E6E6E6}.nav nav>ul li:hover a i{background-color:#3b82a7;transition:background-color 0.4s ease-in-out}.nav nav>ul li.active a i{background-color:#063249;color:#f5f9f8}.nav nav>ul li a{text-decoration:none;display:flex;justify-content:space-between;align-items:center}.nav nav>ul li a .nav-link-text{color:#3b82a7;padding:0 10px}.nav nav>ul li a i{background-color:#97c1d3;color:#1f1b1f;padding:20px}.container{display:flex;height:100%}.container .content{height:100%;width:100%;overflow:auto;background-color:#9eb8b8}@media (min-width: 768px){.container .content p{padding:20px}}.container .content .column{box-sizing:border-box;width:100%;padding:35px 20px 20px 20px;border-left:5px solid #c5c5c5;border-right:5px solid #c5c5c5;margin:auto;background-color:#ddd;min-height:100%}@media (min-width: 1025px){.container .content .column{max-width:850px}}.container .content .column a{text-decoration:none;color:#4397C4}.container .content ol{list-style:none;padding:0 40px;max-width:500px;margin-left:auto;margin-right:auto}.container .content ol li{border-top:2px dashed #AECDD1;margin:0;padding:30px;counter-increment:section;position:relative}.container .content ol li:nth-child(odd):before{content:counter(section);right:100%;margin-right:-20px;position:absolute;border-radius:50%;padding:10px;height:20px;width:20px;background-color:#AECDD1;text-align:center;color:white;font-size:110%}.container .content ol li:nth-child(even):before{content:counter(section);left:100%;margin-left:-20px;position:absolute;border-radius:50%;padding:10px;height:20px;width:20px;background-color:#AECDD1;text-align:center;color:white;font-size:110%}.container .content li:nth-child(odd){border-left:2px dashed #AECDD1;border-top-left-radius:30px;border-bottom-left-radius:30px;margin-right:30px;padding-right:0}.container .content li:nth-child(even){border-right:2px dashed #AECDD1;border-top-right-radius:30px;border-bottom-right-radius:30px;margin-left:30px;padding-left:0}.container .content li:first-child{border-top:0;border-top-right-radius:0;border-top-left-radius:0}.container .content li:last-child{border-bottom-right-radius:0;border-bottom-left-radius:0}html{height:100%}body{font-family:'Open Sans', sans-serif;color:#1f1b1f;background-color:#9eb8b8;-webkit-font-smoothing:antialiased !important;height:100%;font-size:1.1em;margin:0;padding:0}h1{font-family:"Roboto", sans-serif;font-size:2em;background-color:#063249;color:#f5f9f8;margin:0 0 40px 0;padding:20px;text-align:center;overflow:hidden;text-overflow:ellipsis}@media (max-width: 767px){h1{margin:0}}h2{font-family:"Roboto", sans-serif;background-color:#3b82a7;color:#f5f9f8;margin:0 0 40px 0;padding:20px;text-align:center;font-size:1.4em;overflow:hidden;text-overflow:ellipsis}@media (max-width: 767px){h2{margin:0}}h3{font-family:"Roboto", sans-serif;background-color:#4397C4;color:#f5f9f8;margin:0 0 40px 0;padding:20px;text-align:center;font-size:1.1em;overflow:hidden;text-overflow:ellipsis}@media (max-width: 767px){h3{margin:0}}h4{font-size:1.4em;color:#4D341B}h5{font-size:1.2em;color:#333332;font-family:"Roboto", sans-serif}h6{font-size:1em}p{line-height:1.6em}table{line-height:1.9em;border:0 solid #AECDD1}tr:nth-child(odd){background-color:#AECDD1}tr:nth-child(even){background-color:#B4CFDA}hr{margin:50px 0 30px 0;border-top:1px solid #ededed;border-bottom:none}
