--- a/site-templates/reichertpsychotherapie/css/_variables.scss
+++ b/site-templates/reichertpsychotherapie/css/_variables.scss
@@ -19,3 +19,6 @@ $default-margin: 10px;
 $default-padding: 10px;
 
 $max-content-width: 850px;
+
+$navbar-height-mobile: 63px;
+$navbar-height-tablet: 61px;
