--- a/site-templates/reichertpsychotherapie/css/reichertpsychotherapie.scss
+++ b/site-templates/reichertpsychotherapie/css/reichertpsychotherapie.scss
@@ -23,7 +23,7 @@ h1 {
 	font-size: 2em;
 	background-color: $blue-800;
 	color: $light;
-	margin: 0 0 $default-margin * 4 0;
+	margin: 0;
 	padding: $default-padding * 2;
 	text-align: center;
 	overflow: hidden;
@@ -38,7 +38,7 @@ h2 {
 	font-family: "Roboto", sans-serif;
 	background-color: $blue-300;
 	color: $light;
-	margin: 0 0 $default-margin * 4 0;
+	margin: 0;
 	padding: $default-padding * 2;
 	text-align: center;
 	font-size: 1.4em;
@@ -54,7 +54,7 @@ h3 {
 	font-family: "Roboto", sans-serif;
 	background-color: $blue;
 	color: $light;
-	margin: 0 0 $default-margin * 4 0;
+	margin: 0;
 	padding: $default-padding * 2;
 	text-align: center;
 	font-size: 1.1em;
@@ -67,14 +67,26 @@ h3 {
 }
 
 h4 {
-	font-size: 1.4em;
-	color: #4D341B;
+	font-family: "Roboto", sans-serif;
+	font-size: 1em;
+	background-color: $blue-700;
+	color: $light;
+	overflow: hidden;
+	text-overflow: ellipsis;
+	margin: 0;
+	padding: $default-padding * 2;
+	text-align: center;
 }
 
 h5 {
-	font-size: 1.2em;
-	color: #333332;
 	font-family: "Roboto", sans-serif;
+	background-color: $blue-800;
+	color: $light;
+	overflow: hidden;
+	text-overflow: ellipsis;
+	margin: 0;
+	padding: $default-padding * 2;
+	text-align: center;
 }
 
 h6 {
@@ -103,4 +115,13 @@ hr {
 	margin: 50px 0 30px 0;
 	border-top: 1px solid #ededed;
 	border-bottom: none;
+}
+
+a {
+	text-decoration: none;
+	color: $blue;
+}
+
+.hidden {
+	display: none;
 }
