--- a/site-templates/reichertpsychotherapie/css/_variables.scss
+++ b/site-templates/reichertpsychotherapie/css/_variables.scss
@@ -11,7 +11,9 @@ $gray: #B4CFDA;
 $gray-100: #E6E6E6;
 $gray-200: #dddddd;
 $gray-300: #c5c5c5;
-$gray-800: #818181;
+$gray-600: #818181;
+$gray-800: #515151;
+$yellow-400: #F9D983;
 $accent-yellow: #F2EEA7;
 $accent-red: #670612;
 
@@ -22,3 +24,5 @@ $max-content-width: 850px;
 
 $navbar-height-mobile: 63px;
 $navbar-height-tablet: 61px;
+
+$min-height-notification: 125px;
