--- a/site-templates/reichertpsychotherapie/css/reichertpsychotherapie.scss
+++ b/site-templates/reichertpsychotherapie/css/reichertpsychotherapie.scss
@@ -21,13 +21,15 @@ body {
 h1 {
 	font-family: "Roboto", sans-serif;
 	font-size: 2em;
-	background-color: $blue-800;
-	color: $light;
+	color: $gray-800;
 	margin: 0;
 	padding: $default-padding * 2;
 	text-align: center;
+	letter-spacing: 0.02em;
 	overflow: hidden;
 	text-overflow: ellipsis;
+	border-top: 1px solid $gray-800;
+	border-bottom: 2px solid $gray-800;
 
 	@include mobile() {
 		margin: 0;
@@ -36,12 +38,11 @@ h1 {
 
 h2 {
 	font-family: "Roboto", sans-serif;
-	background-color: $blue-300;
-	color: $light;
+	color: $gray-800;
 	margin: 0;
 	padding: $default-padding * 2;
-	text-align: center;
 	font-size: 1.4em;
+	letter-spacing: 0.02em;
 	overflow: hidden;
 	text-overflow: ellipsis;
 
@@ -52,12 +53,11 @@ h2 {
 
 h3 {
 	font-family: "Roboto", sans-serif;
-	background-color: $blue;
-	color: $light;
+	color: $gray-800;
 	margin: 0;
 	padding: $default-padding * 2;
-	text-align: center;
-	font-size: 1.1em;
+	font-size: 1.2em;
+	letter-spacing: 0.02em;
 	overflow: hidden;
 	text-overflow: ellipsis;
 
@@ -69,24 +69,22 @@ h3 {
 h4 {
 	font-family: "Roboto", sans-serif;
 	font-size: 1em;
-	background-color: $blue-700;
-	color: $light;
+	color: $gray-800;
 	overflow: hidden;
 	text-overflow: ellipsis;
+	letter-spacing: 0.02em;
 	margin: 0;
 	padding: $default-padding * 2;
-	text-align: center;
 }
 
 h5 {
 	font-family: "Roboto", sans-serif;
-	background-color: $blue-800;
-	color: $light;
+	color: $gray-800;
 	overflow: hidden;
 	text-overflow: ellipsis;
+	letter-spacing: 0.02em;
 	margin: 0;
 	padding: $default-padding * 2;
-	text-align: center;
 }
 
 h6 {
