--- a/site-templates/reichertpsychotherapie/css/_navigation.scss
+++ b/site-templates/reichertpsychotherapie/css/_navigation.scss
@@ -13,6 +13,7 @@
 	align-items: center;
 	font-family: "Roboto", sans-serif;
 	font-size: 1.2em;
+	z-index: 100;
 
 	@include desktop() {
 		display: none;
