--- a/site-templates/reichertpsychotherapie/css/_variables.scss
+++ b/site-templates/reichertpsychotherapie/css/_variables.scss
@@ -3,10 +3,12 @@ $light: #f5f9f8;
 $blue: #4397C4;
 $blue-100: #97c1d3;
 $blue-300: #3b82a7;
+$blue-500: #3D8EDD;
 $blue-700: #103c53;
 $blue-800: #063249;
 $green: #AECDD1;
 $green-100: #9eb8b8;
+$green-500: #48C3B1;
 $gray: #B4CFDA;
 $gray-100: #E6E6E6;
 $gray-200: #dddddd;
@@ -14,11 +16,15 @@ $gray-300: #c5c5c5;
 $gray-600: #818181;
 $gray-800: #515151;
 $yellow-400: #F9D983;
+$red-400: #A1404B;
+$orange-500: #FF6B01;
+
 $accent-yellow: #F2EEA7;
 $accent-red: #670612;
 
 $default-margin: 10px;
 $default-padding: 10px;
+$default-radius: 10px;
 
 $max-content-width: 850px;
 
