Update template stylings

--- a/site-templates/reichertpsychotherapie/css/_content.scss
+++ b/site-templates/reichertpsychotherapie/css/_content.scss
@@ -143,6 +143,11 @@ ol {
 			margin: 0;
 		}
 
+		a {
+			display: block;
+			margin-bottom: $default-margin;
+		}
+
 		&:before {
 			content: counter(section);
 			top: 0;
