--- a/site-templates/reichertpsychotherapie/css/_variables.scss
+++ b/site-templates/reichertpsychotherapie/css/_variables.scss
@@ -6,9 +6,11 @@ $blue-300: #3b82a7;
 $blue-500: #3D8EDD;
 $blue-700: #103c53;
 $blue-800: #063249;
+$blue-A100: #4E24A0;
 $green: #AECDD1;
 $green-100: #9eb8b8;
 $green-500: #48C3B1;
+$green-700: #54B7BD;
 $gray: #B4CFDA;
 $gray-100: #E6E6E6;
 $gray-200: #dddddd;
@@ -16,6 +18,7 @@ $gray-300: #c5c5c5;
 $gray-600: #818181;
 $gray-800: #515151;
 $yellow-400: #F9D983;
+$yellow-700: #F4BC31;
 $red-400: #A1404B;
 $orange-500: #FF6B01;
 
