Update template css

--- a/site-templates/reichertpsychotherapie/css/_variables.scss
+++ b/site-templates/reichertpsychotherapie/css/_variables.scss
@@ -35,3 +35,5 @@ $navbar-height-mobile: 63px;
 $navbar-height-tablet: 61px;
 
 $min-height-notification: 125px;
+
+$min-tablet-max-flowchart-content-width: 300px;
