--- a/site-templates/reichertpsychotherapie/css/_content.scss
+++ b/site-templates/reichertpsychotherapie/css/_content.scss
@@ -188,7 +188,11 @@ ol {
 
 		div:nth-of-type(1) {
 			flex: 2;
-			padding-right: $default-padding * 2;
+			padding-right: $default-padding * 7;
+
+			@include min-tablet {
+				max-width: $min-tablet-max-flowchart-content-width;
+			}
 		}
 
 		div:nth-of-type(2) {
@@ -223,6 +227,14 @@ ol {
 	@include min-tablet {
 		a {
 			min-width: 25%;
+
+			&:first-child {
+				margin-right: 5px;
+			}
+
+			&:last-child {
+				margin-left: 5px;
+			}
 		}
 	}
 }
